# PrefixDDNS

./: Cargo.toml  Dockerfile  Makefile  README.md  TEMPLATES.md
.github/workflows/: build.yml
src/: config.rs  logging.rs  main.rs  netlink.rs  web.rs
static/: index.html
static/css/: style.css
static/js/: app.js
