[package]
name = "prefixddns"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
futures = "0.3"
rust-embed = "8.5"
mime_guess = "2"
chrono = "0.4"
anyhow = "1.0"
async-stream = "0.3.6"
netlink-sys = { version = "0.8.8", features = ["tokio_socket"] }
netlink-packet-core = "0.7"
colored = "2"
